[gd_scene load_steps=19 format=3 uid="uid://clrxnfnm0dbnb"]

[ext_resource type="Script" path="res://GDScript/GreenSlime.gd" id="1_8224o"]
[ext_resource type="Texture2D" uid="uid://cq571px2nlvpt" path="res://Assets/slime_green.png" id="1_f06di"]
[ext_resource type="PackedScene" uid="uid://ccfiiiy1q4sts" path="res://Scenes/killzone.tscn" id="2_bc2xi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yet7"]
atlas = ExtResource("1_f06di")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_irfxt"]
atlas = ExtResource("1_f06di")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufavs"]
atlas = ExtResource("1_f06di")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8s4u"]
atlas = ExtResource("1_f06di")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj704"]
atlas = ExtResource("1_f06di")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybcxc"]
atlas = ExtResource("1_f06di")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5cnp"]
atlas = ExtResource("1_f06di")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir5xd"]
atlas = ExtResource("1_f06di")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag58n"]
atlas = ExtResource("1_f06di")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r17nd"]
atlas = ExtResource("1_f06di")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5thve"]
atlas = ExtResource("1_f06di")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpxkj"]
atlas = ExtResource("1_f06di")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_dh15e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yet7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irfxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufavs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8s4u")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj704")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybcxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5cnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir5xd")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag58n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r17nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5thve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpxkj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ngcjm"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spwc4"]
size = Vector2(12, 12)

[node name="GreenSlime" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_8224o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dh15e")
animation = &"hurt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ngcjm")

[node name="Killzone" parent="CollisionShape2D" instance=ExtResource("2_bc2xi")]
position = Vector2(1, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/Killzone"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_spwc4")

[node name="EdgeCheck" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 16)

[connection signal="body_entered" from="CollisionShape2D/Killzone" to="." method="_on_killzone_body_entered"]
